@@ -14,6 +14,7 @@ import com.dlsc.workbenchfx.view.controls.module.Page;
 import com.dlsc.workbenchfx.view.controls.module.Tab;
 import com.dlsc.workbenchfx.view.controls.module.Tile;
 import com.google.common.collect.Range;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -365,11 +366,11 @@ public class Workbench extends Control {
 
   private void initToolbarControls(WorkbenchBuilder builder) {
     if (builder.toolbarControlsLeft != null) {
-      toolbarControlsLeft.addAll(List.of(builder.toolbarControlsLeft));
+      toolbarControlsLeft.addAll(Arrays.asList(builder.toolbarControlsLeft));
     }
 
     if (builder.toolbarControlsRight != null) {
-      toolbarControlsRight.addAll(List.of(builder.toolbarControlsRight));
+      toolbarControlsRight.addAll(Arrays.asList(builder.toolbarControlsRight));
     }
   }
 
